--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Yeasbira Moges <yeabsira.r.moges@gmail.com>",
   "dependencies": {
     "gatsby": "^2.20.28",
+    "gatsby-cli": "^2.11.14",
     "gatsby-image": "^2.3.4",
     "gatsby-plugin-google-analytics": "^2.2.4",
     "gatsby-plugin-manifest": "^2.3.5",
