--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Personal Website",
+  "name": "Personal-Website",
   "private": true,
   "description": "Website to feature my projects/interets",
   "version": "0.1.0",
@@ -38,6 +38,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
+    "spb": "gatsby build --prefix-paths && gh-pages -d public",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
