--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Yeasbira Moges <yeabsira.r.moges@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.20.28",
     "gatsby-cli": "^2.11.14",
     "gatsby-image": "^2.3.4",
@@ -14,6 +15,7 @@
     "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-sass": "^2.2.3",
     "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-styled-components": "^3.2.3",
     "gatsby-remark-images": "^3.2.4",
     "gatsby-remark-prismjs": "^3.4.4",
     "gatsby-source-filesystem": "^2.2.4",
@@ -25,7 +27,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
